// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/Input passes the snapshot test for basic setup 1`] = `
<View
  errorBorderColor="danger.500"
  errorMessageColor="danger.500"
  focusBackgroundColor={
    Object {
      "dark": "neutral.800",
      "light": "neutral.50",
    }
  }
  focusBorderColor="primary.500"
  onLayout={[Function]}
  style={
    Object {
      "alignSelf": "flex-start",
      "backgroundColor": "#EDF1F7",
      "borderColor": "#EDF1F7",
      "borderRadius": 8,
      "borderWidth": 1,
      "display": "flex",
      "flexDirection": "row",
      "marginVertical": 4,
      "opacity": 1,
      "paddingHorizontal": 12,
      "paddingVertical": 12,
      "shadowColor": undefined,
    }
  }
  testID="inputFieldContainer"
>
  <TextInput
    accessibilityLabel="This is a placeholder"
    accessibilityState={
      Object {
        "disabled": false,
        "selected": false,
      }
    }
    allowFontScaling={true}
    editable={true}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="This is a placeholder"
    placeholderTextColor="#8F9BB3"
    rejectResponderTermination={true}
    selectionColor="#6A7BFF"
    style={
      Array [
        Object {
          "display": "flex",
          "marginHorizontal": 8,
        },
        Object {
          "color": "#1A2138",
          "fontFamily": "Poppins-Regular",
          "fontSize": 16.099999999999998,
          "fontStyle": "normal",
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        Object {
          "flex": null,
        },
        false,
      ]
    }
    underlineColorAndroid="transparent"
  />
  <View
    onLayout={[Function]}
    style={
      Object {
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
      }
    }
  />
</View>
`;

exports[`Molecules/Input passes the snapshot test for different icons 1`] = `
Array [
  <View
    errorBorderColor="danger.500"
    errorMessageColor="danger.500"
    focusBackgroundColor={
      Object {
        "dark": "neutral.800",
        "light": "neutral.50",
      }
    }
    focusBorderColor="primary.500"
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#EDF1F7",
        "borderColor": "#EDF1F7",
        "borderRadius": 8,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "marginVertical": 4,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 12,
        "shadowColor": undefined,
      }
    }
    testID="inputFieldContainer"
  >
    <Text />
    <TextInput
      accessibilityState={
        Object {
          "disabled": false,
          "selected": false,
        }
      }
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#8F9BB3"
      rejectResponderTermination={true}
      selectionColor="#6A7BFF"
      style={
        Array [
          Object {
            "display": "flex",
            "marginHorizontal": 8,
          },
          Object {
            "color": "#1A2138",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          },
          Object {
            "flex": null,
          },
          false,
        ]
      }
      underlineColorAndroid="transparent"
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    />
  </View>,
  <View
    errorBorderColor="danger.500"
    errorMessageColor="danger.500"
    focusBorderColor="primary.500"
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E4E9F2",
        "borderRadius": 8,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "marginVertical": 4,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 12,
        "shadowColor": undefined,
      }
    }
    testID="inputFieldContainer"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": false,
          "selected": false,
        }
      }
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#C5CEE0"
      rejectResponderTermination={true}
      selectionColor="#6A7BFF"
      style={
        Array [
          Object {
            "display": "flex",
            "marginHorizontal": 8,
          },
          Object {
            "color": "#1A2138",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          },
          Object {
            "flex": null,
          },
          false,
        ]
      }
      underlineColorAndroid="transparent"
      variant="outline"
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text />
    </View>
  </View>,
]
`;

exports[`Molecules/Input passes the snapshot test for different sizes 1`] = `
Array [
  <View
    errorBorderColor="danger.500"
    errorMessageColor="danger.500"
    focusBackgroundColor={
      Object {
        "dark": "neutral.800",
        "light": "neutral.50",
      }
    }
    focusBorderColor="primary.500"
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#EDF1F7",
        "borderColor": "#EDF1F7",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "marginVertical": 4,
        "opacity": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 4,
        "shadowColor": undefined,
      }
    }
    testID="inputFieldContainer"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": false,
          "selected": false,
        }
      }
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#8F9BB3"
      rejectResponderTermination={true}
      selectionColor="#6A7BFF"
      style={
        Array [
          Object {
            "display": "flex",
            "marginHorizontal": 4,
          },
          Object {
            "color": "#1A2138",
            "fontFamily": "Poppins-Regular",
            "fontSize": 11.5,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 16,
          },
          Object {
            "flex": null,
          },
          false,
        ]
      }
      underlineColorAndroid="transparent"
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    />
  </View>,
  <View
    errorBorderColor="danger.500"
    errorMessageColor="danger.500"
    focusBackgroundColor={
      Object {
        "dark": "neutral.800",
        "light": "neutral.50",
      }
    }
    focusBorderColor="primary.500"
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#EDF1F7",
        "borderColor": "#EDF1F7",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "marginVertical": 4,
        "opacity": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 8,
        "shadowColor": undefined,
      }
    }
    testID="inputFieldContainer"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": false,
          "selected": false,
        }
      }
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#8F9BB3"
      rejectResponderTermination={true}
      selectionColor="#6A7BFF"
      style={
        Array [
          Object {
            "display": "flex",
            "marginHorizontal": 4,
          },
          Object {
            "color": "#1A2138",
            "fontFamily": "Poppins-Regular",
            "fontSize": 13.799999999999999,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 20,
          },
          Object {
            "flex": null,
          },
          false,
        ]
      }
      underlineColorAndroid="transparent"
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    />
  </View>,
  <View
    errorBorderColor="danger.500"
    errorMessageColor="danger.500"
    focusBackgroundColor={
      Object {
        "dark": "neutral.800",
        "light": "neutral.50",
      }
    }
    focusBorderColor="primary.500"
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#EDF1F7",
        "borderColor": "#EDF1F7",
        "borderRadius": 8,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "marginVertical": 4,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 12,
        "shadowColor": undefined,
      }
    }
    testID="inputFieldContainer"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": false,
          "selected": false,
        }
      }
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#8F9BB3"
      rejectResponderTermination={true}
      selectionColor="#6A7BFF"
      style={
        Array [
          Object {
            "display": "flex",
            "marginHorizontal": 8,
          },
          Object {
            "color": "#1A2138",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          },
          Object {
            "flex": null,
          },
          false,
        ]
      }
      underlineColorAndroid="transparent"
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    />
  </View>,
  <View
    errorBorderColor="danger.500"
    errorMessageColor="danger.500"
    focusBackgroundColor={
      Object {
        "dark": "neutral.800",
        "light": "neutral.50",
      }
    }
    focusBorderColor="primary.500"
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#EDF1F7",
        "borderColor": "#EDF1F7",
        "borderRadius": 8,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "marginVertical": 4,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 16,
        "shadowColor": undefined,
      }
    }
    testID="inputFieldContainer"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": false,
          "selected": false,
        }
      }
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#8F9BB3"
      rejectResponderTermination={true}
      selectionColor="#6A7BFF"
      style={
        Array [
          Object {
            "display": "flex",
            "marginHorizontal": 8,
          },
          Object {
            "color": "#1A2138",
            "fontFamily": "Poppins-Regular",
            "fontSize": 18.4,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 26,
          },
          Object {
            "flex": null,
          },
          false,
        ]
      }
      underlineColorAndroid="transparent"
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    />
  </View>,
]
`;

exports[`Molecules/Input passes the snapshot test for different variants 1`] = `
Array [
  <View
    errorBorderColor="danger.500"
    errorMessageColor="danger.500"
    focusBackgroundColor={
      Object {
        "dark": "neutral.800",
        "light": "neutral.50",
      }
    }
    focusBorderColor="primary.500"
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#EDF1F7",
        "borderColor": "#EDF1F7",
        "borderRadius": 8,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "marginVertical": 4,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 12,
        "shadowColor": undefined,
      }
    }
    testID="inputFieldContainer"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": false,
          "selected": false,
        }
      }
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#8F9BB3"
      rejectResponderTermination={true}
      selectionColor="#6A7BFF"
      style={
        Array [
          Object {
            "display": "flex",
            "marginHorizontal": 8,
          },
          Object {
            "color": "#1A2138",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          },
          Object {
            "flex": null,
          },
          false,
        ]
      }
      underlineColorAndroid="transparent"
      variant="filled"
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    />
  </View>,
  <View
    errorBorderColor="danger.500"
    errorMessageColor="danger.500"
    focusBorderColor="primary.500"
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E4E9F2",
        "borderRadius": 8,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "marginVertical": 4,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 12,
        "shadowColor": undefined,
      }
    }
    testID="inputFieldContainer"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": false,
          "selected": false,
        }
      }
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#C5CEE0"
      rejectResponderTermination={true}
      selectionColor="#6A7BFF"
      style={
        Array [
          Object {
            "display": "flex",
            "marginHorizontal": 8,
          },
          Object {
            "color": "#1A2138",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          },
          Object {
            "flex": null,
          },
          false,
        ]
      }
      underlineColorAndroid="transparent"
      variant="outline"
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    />
  </View>,
]
`;

exports[`Molecules/Input passes the snapshot test when using style props 1`] = `
<View
  errorBorderColor="danger.500"
  errorMessageColor="danger.500"
  focusBackgroundColor={
    Object {
      "dark": "neutral.800",
      "light": "neutral.50",
    }
  }
  focusBorderColor="primary.500"
  onLayout={[Function]}
  style={
    Object {
      "alignSelf": "flex-start",
      "backgroundColor": "#6A7BFF",
      "borderColor": "#C5CEE0",
      "borderRadius": 8,
      "borderWidth": 2,
      "display": "flex",
      "flexDirection": "row",
      "marginVertical": 4,
      "opacity": 1,
      "paddingHorizontal": 12,
      "paddingVertical": 12,
      "shadowColor": undefined,
    }
  }
  testID="inputFieldContainer"
>
  <TextInput
    accessibilityState={
      Object {
        "disabled": false,
        "selected": false,
      }
    }
    allowFontScaling={true}
    editable={true}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#8F9BB3"
    rejectResponderTermination={true}
    selectionColor="#6A7BFF"
    style={
      Array [
        Object {
          "display": "flex",
          "marginHorizontal": 8,
        },
        Object {
          "color": "#1A2138",
          "fontFamily": "Poppins-Regular",
          "fontSize": 16.099999999999998,
          "fontStyle": "normal",
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        Object {
          "flex": 1,
        },
        false,
      ]
    }
    underlineColorAndroid="transparent"
  />
  <View
    onLayout={[Function]}
    style={
      Object {
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
      }
    }
  />
</View>
`;
